<resources>
    <string name="app_name">Siputu</string>
    <string name="action_settings">Settings</string>
    <string name="sd">dadadadadad"\n"bbhbhbh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="satu_kasturi">
        Proses Pengolahan Tanah
    </string>
    <string name="dua_kasturi">
        Pembibitan Tembakau
    </string>
    <string name="tiga_kasturi">
        Penebaran Bibit Tembakau
    </string>
    <string name="empat_kasturi">
        Pemberian Sekam
    </string>
    <string name="lima_kasturi">
        Pemberian Plastik
    </string>
    <string name="enam_kasturi">
        Cliping (Pemotongan Daun )
    </string>
    <string name="tujuh_kasturi">
        Panen
    </string>
    <string name="isi_satu_ksturi">
        1 Hektar  idealnya 10000 meter Persegi sehingga menghasilkan 3 bedengan, setiap bedengan terisi 5000 pohon untuk 25 meter persegi, Tanah Harus Basah dan Terjaga kelembapannya,Lalu di semprot pestisida dengan talstar.
    </string>
    <string name="isi_dua_ksturi">
        Pada pembibitan tembakau harus diperhatikan jarak tanaman pembibitannya, untuk penyiraman pestisida sesuai kebutuhan.
    </string>
    <string name="isi_tiga_ksturi">
        Proses penebaran dilakukan pada tanah yang basah, dan harus  rata baik untuk bedengan single atau ganda.
    </string>
    <string name="isi_empat_ksturi">
        Penebaran sekam harus segera dilakukan setelah menebar benih guna enjaga kelembapan benih, dan menghindarkan dari hama insekta.
    </string>
    <string name="isi_5_ksturi">
        pada plastic 10 hari pertama harus rutin penyiraman dan full ditututp. \n
Pada umur 10 hari sampai 20hari mulai dilatih untuk dibuka. \n
Pada umur 21 hari benih sudah dapat dibuka. \n
Pemberian plastic untuk menjaga kelembapan dan pelindung dari hujan.
    </string>
    <string name="isi_6_ksturi">
        Proses clipping yang dimaksud ialah dengan cara memotong daun guna untuk mensortir tembakau dan penyelarasan ukuran tembakau satu dengan yang lain pada umur 25 hariselama 3 kali sehari.
    </string>
    <string name="isi_7_ksturi">
        Tanaman tembakau siap dipanen pada umur 75 hari . Cara pemanenan menurut PT.SADHANA adalah dengan mengambil 4 lembar daun bagian bawah untuk di krosok, lalu mengambil 12 daun bagian atas untuk dirajang. Setelah dilakukan perajangan harus dikeringkan selama 3 hari untuk meningkatkan kualitas tembakau.
    </string>
    <string name="kasturi">
        Tembakau Kasturi adalah merupakan jenis tembakau lokal (rakyat) yang
biasanya ditanam atau diusahakan oleh petani pada musim kemarau. Di daerah
Besuki tembakau ini disebut juga “Voor-Oogst” (VO) dan dipakai sebagai bahan rokok
kretek, rokok lintingan atau susur.
    </string>
    <string name="pembibitan_kasturi">
          "\n"
"\t""\t"1 Hektar  idealnya 10000 meter Persegi sehingga menghasilkan 3 bedengan, setiap bedengan terisi 5000 pohon untuk 25 meter persegi, Tanah Harus Basah dan Terjaga kelembapannya,Lalu di semprot pestisida dengan talstar "\n"
        2.	Pembibitan Tembakau "\n"
"\t""\t"Pada pembibitan tembakau harus diperhatikan jarak tanaman pembibitannya, untuk penyiraman pestisida sesuai kebutuhan. "\n"
        3.	Penebaran Bibit Tembakau"\n"
"\t""\t"Proses penebaran dilakukan pada tanah yang basah, dan harus  rata baik untuk bedengan single atau ganda."\n"
4.	Pemberian Sekam"\n"
"\t""\t"Penebaran sekam harus segera dilakukan setelah menebar benih guna enjaga kelembapan benih, dan menghindarkan dari hama insekta.
5.	Pemberian Plastik "\n"
"\t""\t"pada plastic 10 hari pertama harus rutin penyiraman dan full ditututp.
Pada umur 10 hari sampai 20hari mulai dilatih untuk dibuka.
Pada umur 21 hari benih sudah dapat dibuka.
Pemberian plastic untuk menjaga kelembapan dan pelindung dari hujan. "\n"
    </string>
    <string name="budidaya_kasturi_masatanam">
1.	Cliping (Pemotongan Daun )"\n"
"\t""\t"Proses clipping yang dimaksud ialah dengan cara memotong daun guna untuk mensortir tembakau dan penyelarasan ukuran tembakau satu dengan yang lain pada umur 25 hariselama 3 kali sehari. "\n"
7.	Panen "\n"
"\t""\t"Tanaman tembakau siap dipanen pada umur 75 hari . Cara pemanenan menurut PT.SADHANA adalah dengan mengambil 4 lembar daun bagian bawah untuk di krosok, lalu mengambil 12 daun bagian atas untuk dirajang. Setelah dilakukan perajangan harus dikeringkan selama 3 hari untuk meningkatkan kualitas tembakau.



    </string>
</resources>
